# zeroclaw-remote-diagnostics

./: .env.example  .gitignore  CLAUDE.md  Cargo.toml  IoT_Fleet_Command_Platform_PoC_Proposal_updated.docx  README.md  justfile  package.json  pnpm-lock.yaml  zc-prompts.md
crates/zc-canbus-tools/: Cargo.toml
crates/zc-canbus-tools/data/: dtc_generic.tsv  dtc_manufacturer.tsv
crates/zc-canbus-tools/src/: dtc_db.rs  ecu_profile.rs  error.rs  ftb.rs  interface.rs  lib.rs  mock.rs  obd.rs  safety.rs  types.rs  uds.rs  uds_safety.rs
crates/zc-canbus-tools/src/tools/: can_monitor.rs  mod.rs  read_dtcs.rs  read_freeze.rs  read_pid.rs  read_uds_did.rs  read_uds_dtcs.rs  read_vin.rs  uds_session.rs
crates/zc-cloud-api/: Cargo.toml
crates/zc-cloud-api/migrations/: 001_devices.sql  002_commands.sql  003_telemetry.sql  004_heartbeats.sql  005_device_shadows.sql
crates/zc-cloud-api/src/: config.rs  error.rs  events.rs  lib.rs  main.rs  mqtt_bridge.rs  state.rs
crates/zc-cloud-api/src/db/: commands.rs  devices.rs  mod.rs  shadows.rs  telemetry.rs
crates/zc-cloud-api/src/inference/: bedrock.rs  mod.rs  rules.rs  tiered.rs
crates/zc-cloud-api/src/routes/: commands.rs  devices.rs  health.rs  heartbeat.rs  mod.rs  responses.rs  shadows.rs  telemetry.rs  ws.rs
crates/zc-e2e-tests/: Cargo.toml
crates/zc-e2e-tests/src/: lib.rs
crates/zc-e2e-tests/tests/: command_lifecycle.rs  error_paths.rs  heartbeat_telemetry.rs  inference_paths.rs  multi_device.rs  shadow_sync.rs
crates/zc-e2e-tests/tests/helpers/: mod.rs
crates/zc-fleet-agent/: Cargo.toml
crates/zc-fleet-agent/src/: config.rs  executor.rs  heartbeat.rs  inference.rs  lib.rs  main.rs  mqtt_loop.rs  registry.rs  shadow_sync.rs  shell.rs
crates/zc-log-tools/: Cargo.toml
crates/zc-log-tools/src/: error.rs  lib.rs  mock.rs  source.rs  types.rs
crates/zc-log-tools/src/parsers/: journald.rs  json_lines.rs  mod.rs  plaintext.rs  syslog.rs
crates/zc-log-tools/src/tools/: analyze_errors.rs  log_stats.rs  mod.rs  query_journal.rs  search_logs.rs  tail_logs.rs
crates/zc-mqtt-channel/: Cargo.toml
crates/zc-mqtt-channel/src/: channel.rs  config.rs  error.rs  handler.rs  lib.rs  mock.rs  shadows.rs  tls.rs
crates/zc-protocol/: Cargo.toml
crates/zc-protocol/src/: commands.rs  device.rs  dtc.rs  lib.rs  shadows.rs  telemetry.rs  topics.rs
dev/: agent.toml  deploy-pi.sh  run-local.sh  setup.sh
docs/: architecture.md  future-implementation.md  rovo-arch.md  rpi-deployment.md  s32g-testing.md  tasks.md  test.md  troubleshooting.md
frontend/: package.json  vite.config.ts
frontend/src/: app.css  app.html
frontend/src/lib/api/: client.ts
frontend/src/lib/components/: CommandForm.svelte  DeviceCard.svelte  JsonView.svelte  ServiceIndicator.svelte  ShadowPanel.svelte  SparklineChart.svelte  StatusBadge.svelte  TelemetryPanel.svelte
frontend/src/lib/stores/: websocket.svelte.ts
frontend/src/lib/types/: command.ts  device.ts  index.ts
frontend/src/lib/utils/: format.ts
frontend/src/routes/: +layout.svelte  +layout.ts  +page.svelte
frontend/src/routes/commands/: +page.svelte
frontend/src/routes/devices/[id]/: +page.svelte
infra/: main.tf  outputs.tf  terraform.tfvars.example  variables.tf  versions.tf
infra/modules/compute/: main.tf  outputs.tf  variables.tf
infra/modules/data/: main.tf  outputs.tf  variables.tf
infra/modules/iot-core/: main.tf  outputs.tf  variables.tf
infra/modules/monitoring/: main.tf  outputs.tf  variables.tf
infra/modules/networking/: main.tf  outputs.tf  variables.tf
scripts/: prepare_dtc_data.py
