[package]
name = "zc-canbus-tools"
description = "CAN bus / OBD-II diagnostic tools for ZeroClaw"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
zc-protocol = { workspace = true }
tokio = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }

# CAN bus — only builds on Linux
[target.'cfg(target_os = "linux")'.dependencies]
socketcan = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["test-util", "macros"] }
