[package]
name = "zc-cloud-api"
description = "Cloud API server — Axum + PostgreSQL + MQTT bridge"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "zc-cloud-api"
path = "src/main.rs"

[dependencies]
zc-protocol = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }

[dev-dependencies]
http-body-util = "0.1"
