[package]
name = "zc-fleet-agent"
description = "Edge agent binary — ZeroClaw + CAN bus + MQTT + Ollama"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
name = "zc_fleet_agent"
path = "src/lib.rs"

[[bin]]
name = "zc-fleet-agent"
path = "src/main.rs"

[dependencies]
zc-protocol = { workspace = true }
zc-canbus-tools = { workspace = true }
zc-mqtt-channel = { workspace = true }
zc-log-tools = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
chrono = { workspace = true }
rumqttc = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
reqwest = { workspace = true }
thiserror = { workspace = true }
toml = "0.8"
shell-words = "1.1"

[dev-dependencies]
wiremock = "0.6"
