[package]
name = "zc-log-tools"
description = "Log analysis tools for ZeroClaw (syslog, journald, JSON)"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
zc-protocol = { workspace = true }
tokio = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
chrono = { workspace = true }
regex = { workspace = true }
