[package]
name = "zc-mqtt-channel"
description = "MQTT channel implementation for ZeroClaw (AWS IoT Core)"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
zc-protocol = { workspace = true }
tokio = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
chrono = { workspace = true }
rumqttc = { workspace = true }
